qtsvg-opensource-src (5.5.0-2) UNRELEASED; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Remove libqt5svg5-private-dev. Nothing in the stack is using it and
    according to dak there are no rdeps (Closes: #790769).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 02 Oct 2015 16:21:16 -0300

qtsvg-opensource-src (5.5.0-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.5.0.
  * Update debian/copyright.
  * Do not run tests during arch-indep builds.
  * Remove symbols that are missing with GCC 5.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 27 Aug 2015 19:38:37 +0300

qtsvg-opensource-src (5.4.2-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 24 Jun 2015 18:40:03 -0300

qtsvg-opensource-src (5.4.2-1) experimental; urgency=medium

  [ Timo Jyrinki ]
  * Update debian/copyright.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream release.
    - Bump Qt build dependencies.
  * Clear up the list in Uploaders removing people who hasn't committed to the
    repo in more than a year. They can re add themselves whenever they want
    (and we really hope to see you back really soon!).
  * Use pkgkde-mark-private-symbols from pkg-kde-tools' 0.15.17.
    - Remove relevant debian/copyright entry.
  * Expose HTML documentation (Closes: #751184).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 03 Jun 2015 18:50:10 -0300

qtsvg-opensource-src (5.4.1-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.4.1.
  * Update watch file to qt.io
  * Mark symbols missing with GCC 5 as optional (Closes: #778094).
  * debian/mark-private-symbols.sh:
    - Strip trailing colon from symbols names.
    - Unmark private symbols before processing them.

 -- Timo Jyrinki <timo@debian.org>  Wed, 04 Mar 2015 09:47:42 +0000
