@@ -4,6 +4,10 @@ qtsvg-opensource-src (5.5.0-2) UNRELEASED; urgency=medium
   * Remove libqt5svg5-private-dev. Nothing in the stack is using it and
     according to dak there are no rdeps (Closes: #790769).
 
+  [ Dmitry Shachnev ]
+  * Move private headers to a temporary directory so that we can really
+    mark them (based on code in qtmultimedia).
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 02 Oct 2015 16:21:16 -0300
 
 qtsvg-opensource-src (5.5.0-1) experimental; urgency=medium
